apt upgrade before test

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,6 @@
 init:
 - appveyor version
-
+- sudo ACCEPT_EULA=Y apt-get -qq -y update && sudo ACCEPT_EULA=Y apt-get -qq -y upgrade
 test_script:
 - sh: |
     PKG_VERSION=$(ls /var/cache/apt/archives/powershell*|head -n1|tr '~' '-')
